[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/bullet.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/playerBullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 8.06226

[node name="bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 2, 1.2, 1.2, 1 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 2 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
